Corrected some mistakes.
